--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </header>
 
     <main>
-      <section class="firstsection">
+      <section id="home" class="firstsection">
         <div class="leftsection">
           Hi, My name is <span class="purple">Piyush</span>
           <div>and I am a passionate</div>
