--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <div class="details-container">
                 <img src="experience.png" alt="Experience icon" class="icon">
                 <h3>Student</h3>
-                <p>2nd year <br/> Computer Science Engineering. </p>
+                <p>3rd year <br/> Computer Science Engineering. </p>
               </div>
               <div class="about-containers">
                 <div class="details-container">
@@ -280,6 +280,26 @@
             </div>
             </div>
           </div>
+          <div class="position">
+            <div class="details-container color container">
+            <div class="article-container">
+              <img src="waste-classifier.png" alt="Project 3" class="project-img" id="resume">
+            </div>
+            <h2 class="project-title">Waste Classifier App</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/piyushpandey955/Waste-Classifier')">Github</button>
+            </div>
+            </div>
+            <div class="details-container color container">
+            <div class="article-container">
+              <img src="chatbot.png" alt="Project 4" class="project-img" id="resume">
+            </div>
+            <h2 class="project-title">Bhagwat Geeta AI Chatbot</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/piyushpandey955/Bhagwat-Gita-Chatbot')">Github</button>
+            </div>
+            </div>
+          </div>
           
         </div>
       </section>
@@ -334,7 +354,7 @@
     <!-- Setup and start animation! -->
     <script>
       var typed = new Typed("#element", {
-        strings: ["CSE Student", "Coder", " Web Developer."],
+        strings: ["CSE Student", "Coder", " Web Developer", "App Developer."],
         typeSpeed: 50,
       });
     </script>
