--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
             <div class="article-container">
               <img src="project-3.png" alt="Project 3" class="project-img" id="resume">
             </div>
-            <h2 class="project-title">Amazon Clone Webpage</h2>
+            <h2 class="project-title">Shoppe - Ecommerce website</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/piyushpandey955/Amazon_clone_')">Github</button>
+              <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/piyushpandey955/E-commerce')">Github</button>
             </div>
             </div>
             <div class="details-container color container">
