updated about section
added download resume functionality

--- a/index.html
+++ b/index.html
@@ -93,12 +93,19 @@
                 <h3>Student</h3>
                 <p>3rd year <br/> Computer Science Engineering. </p>
               </div>
-              <div class="about-containers">
-                <div class="details-container">
-                  <img src="hobbies.png" alt="Hobbies icon" class="icon">
-                  <h3>Hobbies</h3>
-                  <p>passionate <br/> coder, Web Developer. </p>
-                </div>
+
+              <div class="details-container">
+                <img src="resume.png" alt="Resume icon" class="icon">
+                <h3>Download My Resume</h3>
+                <a href="Resume_AI_Ml_3rd year.pdf" download=""><button id="resume-btn" style="color: white; background-color: orangered; border-color: black;">Download</button></a>
+              </div>
+
+              <div class="details-container">
+                <img src="hobbies.png" alt="Hobbies icon" class="icon">
+                <h3>Hobbies</h3>
+                <p>passionate <br/> coder, Web Developer, Machine Learning, Deep Learning, AI. </p>
+              </div>
+
             </div>
 
           </div>
