--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <div class="details-container">
                 <img src="resume.png" alt="Resume icon" class="icon">
                 <h3>Download My Resume</h3>
-                <a href="Resume_AI_Ml_3rd year.pdf" download=""><button id="resume-btn" style="color: white; background-color: orangered; border-color: black;">Download</button></a>
+                <a href="Resume_3rd_Year_AI_ML.pdf" download=""><button id="resume-btn" style="color: white; background-color: orangered; border-color: black;">Download</button></a>
               </div>
 
               <div class="details-container">
