--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <div class="details-container">
                 <img src="resume.png" alt="Resume icon" class="icon">
                 <h3>Download My Resume</h3>
-                <a href="Resume_3rd_Year_AI_ML.pdf" download=""><button id="resume-btn" style="color: white; background-color: orangered; border-color: black;">Download</button></a>
+                <a href="Piyush Kumar Pandey - Resume.pdf" download=""><button id="resume-btn" style="color: white; background-color: orangered; border-color: black;">Download</button></a>
               </div>
 
               <div class="details-container">
@@ -327,8 +327,8 @@
             <p><a href="https://www.linkedin.com/in/piyush-pandey-ab18bb278/" target="_blank">Linkedin</a></p>
           </div>
           <div class="contact-info-container">
-            <img src="insta.png" alt="Instagram icon" class="icon contact-icon">
-            <p><a href="https://www.instagram.com/piyushpandey955/" target="_blank">Instagram</a></p>
+            <img src="leetcode.png" alt="leetcode icon" class="icon contact-icon">
+            <p><a href="https://leetcode.com/u/piyushpandey955/" target="_blank">Instagram</a></p>
           </div>
         </div>
       </section>
