--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
           </div>
           <div class="contact-info-container">
             <img src="leetcode.png" alt="leetcode icon" class="icon contact-icon">
-            <p><a href="https://leetcode.com/u/piyushpandey955/" target="_blank">Instagram</a></p>
+            <p><a href="https://leetcode.com/u/piyushpandey955/" target="_blank">LeetCode</a></p>
           </div>
         </div>
       </section>
