--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Piyush Pandey - Full Stack Developer Portfolio. Explore my projects, skills, and experience in web development." />
     <meta name="keywords" content="Piyush Pandey, Portfolio, Web Developer, Full Stack Developer, React, JavaScript" />
